# github_actions

./: Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  deny.toml
.github/: CODEOWNERS
.github/workflows/: auto-release.yml  ci.yml  docker.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  FAQ.md  README.md  README_STANDARDS.md  RELEASING.md  TEMPLATE_BOOTSTRAP_CHECKLIST.md
scripts/: check_template_placeholders.py  release_version.py
src/: cargo.rs  crates_io.rs  github.rs  lib.rs  main.rs  model.rs  pinning.rs  remote.rs  update.rs  workflow.rs
