[package]
name = "github-actions-maintainer"

version = "0.1.1"

edition = "2024"
rust-version = "1.94.0"
description = "General-purpose GitHub Actions maintenance toolkit with secure workflow pinning"
license = "MIT"
repository = "https://github.com/ThreatFlux/github-actions-maintainer"
homepage = "https://github.com/ThreatFlux/github-actions-maintainer"
keywords = ["github-actions", "security", "pinning", "automation", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive", "env"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.20.0"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "github-actions-maintainer"
path = "src/main.rs"
